# better-struct

./: CMakeLists.txt  Makefile  README.md  gcovr.sh
include/better-struct/: better-struct.h  macros.h  macros_utility.h
test/: hello_world_benchmark.cc  hello_world_test.cc  macros_utility_test.cc
